Fix note title colors not showing in folders with child folders.

--- a/Colored Sidebar Items.css
+++ b/Colored Sidebar Items.css
@@ -121,15 +121,15 @@ these to suit your own folder structure and vault theme!
     var(--contrast-color)
   );
 }
-.tree-item-children .nav-folder:has(.nav-folder-title[data-path^="00"]) {
+.nav-folder-title[data-path^="00"] + .tree-item-children 
+  .nav-folder {
   --nav-indentation-guide-color: color-mix(
     in srgb,
     var(--mint) var(--medium-contrast-amount),
     transparent
   );
 }
-.tree-item-children
-  .nav-folder:has(.nav-folder-title[data-path^="00"])
+.nav-folder-title[data-path^="00"] + .tree-item-children 
   .nav-file-title {
   color: color-mix(
     in srgb,
@@ -181,15 +181,15 @@ these to suit your own folder structure and vault theme!
     var(--contrast-color)
   );
 }
-.tree-item-children .nav-folder:has(.nav-folder-title[data-path^="01"]) {
+.nav-folder-title[data-path^="01"] + .tree-item-children 
+  .nav-file-folder {
   --nav-indentation-guide-color: color-mix(
     in srgb,
     var(--cyan) var(--medium-contrast-amount),
     transparent
   );
 }
-.tree-item-children
-  .nav-folder:has(.nav-folder-title[data-path^="01"])
+.nav-folder-title[data-path^="01"] + .tree-item-children 
   .nav-file-title {
   color: color-mix(
     in srgb,
@@ -245,15 +245,15 @@ these to suit your own folder structure and vault theme!
     var(--contrast-color)
   );
 }
-.tree-item-children .nav-folder:has(.nav-folder-title[data-path^="02"]) {
+.nav-folder-title[data-path^="02"] + .tree-item-children 
+  .nav-file-folder {
   --nav-indentation-guide-color: color-mix(
     in srgb,
     var(--light-blue) var(--medium-contrast-amount),
     transparent
   );
 }
-.tree-item-children
-  .nav-folder:has(.nav-folder-title[data-path^="02"])
+.nav-folder-title[data-path^="02"] + .tree-item-children 
   .nav-file-title {
   color: color-mix(
     in srgb,
@@ -305,15 +305,15 @@ these to suit your own folder structure and vault theme!
     var(--contrast-color)
   );
 }
-.tree-item-children .nav-folder:has(.nav-folder-title[data-path^="03"]) {
+.nav-folder-title[data-path^="03"] + .tree-item-children 
+  .nav-folder {
   --nav-indentation-guide-color: color-mix(
     in srgb,
     var(--blue) var(--medium-contrast-amount),
     transparent
   );
 }
-.tree-item-children
-  .nav-folder:has(.nav-folder-title[data-path^="03"])
+.nav-folder-title[data-path^="03"] + .tree-item-children 
   .nav-file-title {
   color: color-mix(
     in srgb,
@@ -365,15 +365,15 @@ these to suit your own folder structure and vault theme!
     var(--contrast-color)
   );
 }
-.tree-item-children .nav-folder:has(.nav-folder-title[data-path^="04"]) {
+.nav-folder-title[data-path^="99"] + .tree-item-children 
+  .nav-folder {
   --nav-indentation-guide-color: color-mix(
     in srgb,
     var(--violet) var(--medium-contrast-amount),
     transparent
   );
 }
-.tree-item-children
-  .nav-folder:has(.nav-folder-title[data-path^="04"])
+.nav-folder-title[data-path^="04"] + .tree-item-children 
   .nav-file-title {
   color: color-mix(
     in srgb,
@@ -425,15 +425,15 @@ these to suit your own folder structure and vault theme!
     var(--contrast-color)
   );
 }
-.tree-item-children .nav-folder:has(.nav-folder-title[data-path^="05"]) {
+.nav-folder-title[data-path^="05"] +.tree-item-children
+  .nav-folder {
   --nav-indentation-guide-color: color-mix(
     in srgb,
     var(--purple) var(--medium-contrast-amount),
     transparent
   );
 }
-.tree-item-children
-  .nav-folder:has(.nav-folder-title[data-path^="05"])
+.nav-folder-title[data-path^="05"] + .tree-item-children 
   .nav-file-title {
   color: color-mix(
     in srgb,
@@ -489,15 +489,15 @@ these to suit your own folder structure and vault theme!
     var(--contrast-color)
   );
 }
-.tree-item-children .nav-folder:has(.nav-folder-title[data-path^="06"]) {
+.nav-folder-title[data-path^="06"] + .tree-item-children 
+  .nav-file-folder {
   --nav-indentation-guide-color: color-mix(
     in srgb,
     var(--magenta) var(--medium-contrast-amount),
     transparent
   );
 }
-.tree-item-children
-  .nav-folder:has(.nav-folder-title[data-path^="06"])
+.nav-folder-title[data-path^="06"] + .tree-item-children 
   .nav-file-title {
   color: color-mix(
     in srgb,
@@ -553,15 +553,15 @@ these to suit your own folder structure and vault theme!
     var(--contrast-color)
   );
 }
-.tree-item-children .nav-folder:has(.nav-folder-title[data-path^="07"]) {
+.nav-folder-title[data-path^="07"] + .tree-item-children 
+  .nav-file-folder {
   --nav-indentation-guide-color: color-mix(
     in srgb,
     var(--hot-red) var(--medium-contrast-amount),
     transparent
   );
 }
-.tree-item-children
-  .nav-folder:has(.nav-folder-title[data-path^="07"])
+.nav-folder-title[data-path^="07"] + .tree-item-children 
   .nav-file-title {
   color: color-mix(
     in srgb,
@@ -617,15 +617,15 @@ these to suit your own folder structure and vault theme!
     var(--contrast-color)
   );
 }
-.tree-item-children .nav-folder:has(.nav-folder-title[data-path^="99"]) {
+.nav-folder-title[data-path^="99"] + .tree-item-children 
+  .nav-file-folder {
   --nav-indentation-guide-color: color-mix(
     in srgb,
     var(--cool-gray) var(--medium-contrast-amount),
     transparent
   );
 }
-.tree-item-children
-  .nav-folder:has(.nav-folder-title[data-path^="99"])
+.nav-folder-title[data-path^="99"] + .tree-item-children 
   .nav-file-title {
   color: color-mix(
     in srgb,
